--- a/index.html
+++ b/index.html
@@ -838,7 +838,8 @@
           <a href="javascript:void(0)" onclick="openScriptModal()">Script</a> <a href="javascript:void(0)" onclick="openLinksModal()">Links</a> </div>
       </li>
       <li><a href="#o-que-e">O que é?</a></li>
-      <li><a href="#como-funciona">Como Funciona?</a></li> <li><a href="#impactos">Impactos Ambientais</a></li>
+      <li><a href="#como-funciona">Como Funciona?</a></li>
+      <li><a href="#impactos">Impactos Ambientais</a></li>
       <li><a href="#vantagens">Vantagens</a></li>
       <li><a href="#desvantagens">Desvantagens</a></li>
       <li><a href="#uhe-lajeado">UHE Lajeado</a></li>
@@ -855,7 +856,8 @@
 
     <ul class="mobile-main-menu-content" id="mobileMainMenu">
       <li><a href="#o-que-e" onclick="closeAllMobileMenusAndScroll(this)">O que é?</a></li>
-      <li><a href="#como-funciona" onclick="closeAllMobileMenusAndScroll(this)">Como Funciona?</a></li> <li><a href="#impactos" onclick="closeAllMobileMenusAndScroll(this)">Impactos Ambientais</a></li>
+      <li><a href="#como-funciona" onclick="closeAllMobileMenusAndScroll(this)">Como Funciona?</a></li>
+      <li><a href="#impactos" onclick="closeAllMobileMenusAndScroll(this)">Impactos Ambientais</a></li>
       <li><a href="#vantagens" onclick="closeAllMobileMenusAndScroll(this)">Vantagens</a></li>
       <li><a href="#desvantagens" onclick="closeAllMobileMenusAndScroll(this)">Desvantagens</a></li>
       <li><a href="#uhe-lajeado" onclick="closeAllMobileMenusAndScroll(this)">UHE Lajeado</a></li>
@@ -886,8 +888,8 @@
         <div class="section-content">
             <h2>Como funciona uma Usina Hidrelétrica?</h2>
         </div>
-        <div class="section-image" onclick="expandImage('https://i.imgur.com/gKtpwdy.png')">
-            <img src="https://i.imgur.com/gKtpwdy.png" alt="Como Funciona uma Usina Hidrelétrica" />
+        <div class="section-image" onclick="expandImage('https://imgur.com/b6gKpby.png')">
+            <img src="https://imgur.com/b6gKpby.png" alt="Como Funciona uma Usina Hidrelétrica" />
             <div class="overlay-text">Expandir</div>
         </div>
         <div class="section-content">
@@ -990,6 +992,7 @@
         <h3>Turismo e Lazer</h3>
         <p>O lago formado pela usina tornou-se um atrativo turístico, oferecendo opções de lazer como passeios de barco e pesca esportiva.
         A orla de Palmas, por exemplo, foi revitalizada para aproveitar o potencial turístico do lago.</p>
+        <p><a href="https://www.investco.com.br/sites/edpbrlajeado/files/2023-02/Investco_Dados%20T%C3%A9cnicos.pdf" target="_blank" style="display: inline-block; margin-top: 15px; padding: 10px 20px; background-color: #0d47a1; color: white; text-decoration: none; border-radius: 5px;">Acesse a Ficha Técnica Completa (PDF)</a></p>
       </div>
     </section>
 
@@ -1022,7 +1025,7 @@
           <span class="close-button" onclick="closeQuemSomosNosModal()">&times;</span>
           <h1>Nosso Projeto: Rio de Energia</h1>
           <p>Este site foi
-          desenvolvido como parte integrante da <strong>Amostra Científica da Escola Tiradentes em Palmas, TO</strong>.
+          desenvolvido como parte integrante da <strong>Mostra Científica da Escola Tiradentes em Palmas, TO</strong>.
           Nosso objetivo é explorar o tema da Usina Hidrelétrica Luís Eduardo Magalhães (UHE Lajeado), destacando sua importância, impactos e curiosidades.</p>
           <p>Agradecemos a todos que nos apoiaram neste processo de pesquisa e criação.</p>
 
